--- a/css/header/search-form.css
+++ b/css/header/search-form.css
@@ -1,4 +1,12 @@
 .search-form {
   position: relative;
   max-width: 500px;
+  height: 44px;
+}
+
+@media (max-width: 782px) {
+  .search-form {
+    width: 320px;
+    justify-self: end;
+  }
 }
